@@ -1,5 +1,6 @@
 0.15 release
 
+	* added support for multiple trackers in magnet links
 	* added support for explicitly flushing the disk cache
 	* added torrent priority to affect bandwidth allocation for its peers
 	* reduced the number of floating point operations (to better support
